<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">CPSC 112</string>
    <string name="slogan">Dive Into Success</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of SucCesspool</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_intro2">""</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    
     <!-- Strings related to Goal -->
    <string name="enter_goal">Dive In!</string>
    <string name="cancel_goal">Cancel</string>
    <string name="describe_goal">Describe your goal</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">Add a New Goal</string>
    <string name="goal_label">Add a New Goal</string>
    <string name="menu_title">My Goals</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="no_items">No Items</string>
    <string name="goals_completed">Congratulations! You\'ve achieved all your goals for today</string>
    <string name="goal_list_header">Your Goals for This Cycle</string>
    <string name="goal_moneyearned">You have earned back: </string>
    <string name="create_new_circle">Dive Into a New Pool</string>
    <string name="goal_add_hint">(Click \'+\' to add a new goal)</string>
    <string name="goal_complete_hint">(Click on each goal when you complete it)</string> 
	<string name="popup_description">Congrats!</string>
    
    <!-- Strings related to Create Circle -->
    <string name="app_name">SuccessPool</string>
    <string name="action_settings">Settings</string>
    <string name="create_a_new_circle">Create a New Pool</string>
    
    <string name="circle_name">Give your pool a name:</string>
    <string name="circle_name_text">Choose your name</string>
    <string name="circle_name_error">Please enter a valid pool name.</string>
    
    <string name="cycle_length">How many days will your pool be active?</string>
    <string name="cycle_length_number">Choose your cycle</string>
    <string name="cycle_length_days">Days</string>
    <string name="cycle_length_error">Please enter a valid number of days.</string>
    
    <string name="money_committed">How much money will you commit over this cycle?</string>
    <string name="money_committed_sign">$</string>
    <string name="money_committed_number">Choose your commitment</string>
    <string name="money_committed_error">Please enter a number for money committed.</string>
    
	<string name="calculate_money_per_day">Click me to calculate money per day</string>
    
    <string name="choose_charity">If goals remain uncompleted at the end of this cycle, some of your money committed will go towards a charity of your choice. Where will your money go?</string>
    <string name="choose_charity_input">Choose your charity</string>
    <string name="charity_input_error">Please try again.</string>
    
    <string name="buttonCreatePool">Create Pool</string>
    
    
    <!-- Strings related to Homepage -->
    <string name="view_pools_button">View Your Circle</string>
    <string name="create_pool_button">Create a New Circle</string>
    <string name="set_goals_button">Set Your Goals</string>
    <string name="view_goals_button">View Your Goals</string>
    <string name="create_text">Step 1: Create</string>
    <string name="achieve_text">Step 2: Achieve</string>
    <string name="review_text">Step 3: Review</string>
    
    <!-- Strings from CustomAdapter.java -->
    <string name="text1">Title View</string>
    <string name="timestamp">Your item has been outstanding for: </string>
    
    <!--  Strings from CircleDisplay -->
    <string name="labelCircleName">Your Pool: </string>
    <string name="labelCommitment1">Your Commitment: </string>
    <string name="labelCommitment2">You have committed $</string>
    <string name="labelCommitment3"> over </string>
    <string name="labelCommitment4"> days.</string>    
    <string name="labelCharity">Your Charity:</string>  
    <string name="textMoneyGained">Money Gained:</string>  
    <string name="textMoneyGained2">You have earned back $</string>  
    <string name="textMoneyGained3">out of a total of $</string>  
    <string name="buttonSetGoals">View Your Goals</string>    
    
    <!--  Strings from CircleExpired -->
    <string name="messageStart">Your circle </string>
    <string name="messageFrag1_1">of </string>
    <string name="messageFrag1_2"> days has expired. </string>
    <string name="messageFrag2_1">You committed $</string>
    <string name="messageFrag2_2"> at the beginning of this cycle. </string>
    <string name="messageFrag3_1">You have earned back $</string>
    <string name="messageFrag4_1">You will donate $ </string>
    <string name="messageFrag4_2">to </string>
    <string name="tryAgain">Thanks for using SuccessPool! Dive into a new pool by clicking the button below.</string>
    <string name="create_new_pool_button">Create a New Pool</string>
    
    
</resources>
