<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cpsc112yale.successpoolapp.CreateCircleActivity" >

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/create_a_new_circle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelCircleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circle_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputCircleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/circle_name_text"
        android:inputType="textAutoCorrect" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelCycleLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_length"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputCycleLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/cycle_length_number"
        android:inputType="number" />

    <TextView
        android:id="@+id/labelCycleLengthDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_length_days"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/inputMoneyCommitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_committed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labelMoneyCommittedSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_committed_sign"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textMoneyCommitted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/money_committed_number"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonCalculate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_money_per_day" />

    <TextView
        android:id="@+id/displayMoneyPerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labelInviteFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_friends"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonInviteFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_friends_button" />
    
</LinearLayout>
