<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/timeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/create_pool_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_pool_button" />

    <TextView
        android:id="@+id/labelTimeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textAchieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achieve_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/set_goals_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_goals_button" />

    <TextView
        android:id="@+id/textMoneyGained3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/view_goals_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_goals_button" />

    <Button
        android:id="@+id/view_pools_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_pools_button" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>
