<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/goal_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/goal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/describe_goal"
        android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
        android:padding="16dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/enter_goal" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/cancel_goal" />

</LinearLayout>