<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cpsc112yale.successpoolapp.MainActivity" >

    <TextView
        android:id="@+id/labelCircleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCircleName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/inputCircleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/labelCommitment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCommitment1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labelCommitment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCommitment2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/inputMoneyCommitted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/labelCommitment3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCommitment3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/inputCycleLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/labelCommitment4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCommitment4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labelCharity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCharity"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/inputCharity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/labelTimeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time Remaining:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/timeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
